[package]
name = "librustzcash"
description = "Rust FFI used by the zcashd binary. Not an official API."
version = "0.2.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Jay Graber <jay@z.cash>",
    "Simon Liu <simon@z.cash>"
]
homepage = "https://github.com/zcash/zcash"
repository = "https://github.com/zcash/zcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "rustzcash"
path = "src/rust/src/rustzcash.rs"
crate-type = ["staticlib"]

[dependencies]
bellman = "0.14"
blake2b_simd = "0.5"
blake2s_simd = "0.5"
bls12_381 = "0.8"
group = "0.13"
incrementalmerkletree = "0.3"
libc = "0.2"
jubjub = "0.10"
subtle = "2.2"
rand_core = "0.6"
tracing = "0.1"
tracing-core = "0.1"
tracing-appender = "0.1"
zcash_history = "0.3"
zcash_primitives = "0.11"
zcash_proofs = "0.11"
ed25519-zebra = "4"
rand = "0.7.2"
tiny-bip39 = "0.6.2"
wagyu-zcash-parameters = "0.2"

# Metrics
hyper = { version = "=0.14.12", default-features = false, features = ["server", "tcp", "http1"] }
ipnet = "2"
metrics = "0.14.2"
metrics-exporter-prometheus = "0.3"
thiserror = "1"
tokio = { version = "1.8", features = ["rt", "net", "time", "macros"] }

# Temporary workaround for https://github.com/myrrlyn/funty/issues/3
funty = "=1.1.0"

[patch.crates-io]
# zcash_proofs = { git = "https://github.com/piratenetwork/librustzcash", rev = "b5a78a18c7e25e2335ab2d69e9d1c3626e265fb1"}
# zcash_primitives = { git = "https://github.com/piratenetwork/librustzcash", rev = "b5a78a18c7e25e2335ab2d69e9d1c3626e265fb1"}
# zcash_history = { git = "https://github.com/piratenetwork/librustzcash", rev = "b5a78a18c7e25e2335ab2d69e9d1c3626e265fb1"}

#Test local changes to librustzcash
zcash_primitives = { path = '../librustzcash/zcash_primitives'}
zcash_proofs = { path = '../librustzcash/zcash_proofs'}
zcash_history = { path = '../librustzcash/zcash_history'}

[dependencies.tracing-subscriber]
version = "0.2.12"
default-features = false
features = ["ansi", "chrono", "env-filter"]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
