[package]
name = "librustzcash"
description = "Rust FFI used by the zcashd binary. Not an official API."
version = "0.2.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Jay Graber <jay@z.cash>",
    "Simon Liu <simon@z.cash>"
]
homepage = "https://github.com/zcash/zcash"
repository = "https://github.com/zcash/zcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "rustzcash"
path = "src/rust/src/rustzcash.rs"
crate-type = ["staticlib"]

[dependencies]
bellman = "0.14"
blake2b_simd = "1"
blake2s_simd = "1"
bls12_381 = "0.8"
bridgetree = "0.7"
byteorder = "1"
group = "0.13"
hex = "0.4"
incrementalmerkletree = "0.8"
libc = "0.2"
jubjub = "0.10"
memuse = "0.2"
orchard = "0.14"
redjubjub = "0.8"
sapling-crypto = { package = "sapling-crypto", version = "0.7" }
subtle = "2.2"
rand_core = "0.6"
tracing = "0.1"
tracing-core = "0.1"
tracing-appender = "0.1"
zcash_address = "0.11"
zcash_encoding = "0.4"
zcash_history = "0.4"
zcash_note_encryption = "0.4.1"
zcash_primitives = { version = "0.27", features = ["temporary-zcashd", "transparent-inputs"] }
zcash_protocol = "0.8"
zcash_proofs = { version = "0.27", features = ["directories"] }
zcash_transparent = "0.7"
zip32 = "0.2"
zcash_spec = "0.2"
ed25519-zebra = "4"
rand = "0.8"
tiny-bip39 = { version = "0.6.2", features = ["chinese-simplified", "chinese-traditional", "french", "italian", "japanese", "korean", "spanish"] }
wagyu-zcash-parameters = "0.2"

# Rust/C++ interop
# The version needs to match depends/packages/native_cxxbridge.mk
cxx = { version = "=1.0.194", features = ["c++17"] }

# Metrics
hyper = { version = "=0.14.12", default-features = false, features = ["server", "tcp", "http1"] }
ipnet = "2"
metrics = "0.14.2"
metrics-exporter-prometheus = "0.3"
thiserror = "1"
tokio = { version = "1.8", features = ["rt", "net", "time", "macros"] }

# Temporary workaround for https://github.com/myrrlyn/funty/issues/3
funty = "=1.1.0"

[patch.crates-io]
sapling-crypto        = { git = "https://github.com/piratenetwork/sapling-crypto.git",        rev = "62fcf59a4d933244ee6280182c6cd3e5290e8a90" }
zcash_note_encryption = { git = "https://github.com/PirateNetwork/zcash_note_encryption.git", rev = "ede44ea608e667c78309c598fbf4d70f69c15c29" }
orchard               = { git = "https://github.com/PirateNetwork/orchard.git",               rev = "af86f0b2603d149ee2e7da7ce195ee8cd46c7664" }
halo2_gadgets         = { git = "https://github.com/PirateNetwork/halo2.git",                 rev = "261faaccd5a30c19bb8468600841a0dac305adf5" }
halo2_proofs          = { git = "https://github.com/PirateNetwork/halo2.git",                 rev = "261faaccd5a30c19bb8468600841a0dac305adf5" }
halo2_poseidon        = { git = "https://github.com/PirateNetwork/halo2.git",                 rev = "261faaccd5a30c19bb8468600841a0dac305adf5" }
zcash_address         = { git = "https://github.com/piratenetwork/librustzcash.git",          rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_encoding        = { git = "https://github.com/piratenetwork/librustzcash.git",          rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_protocol        = { git = "https://github.com/piratenetwork/librustzcash.git",          rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_primitives      = { git = "https://github.com/piratenetwork/librustzcash.git",          rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_proofs          = { git = "https://github.com/piratenetwork/librustzcash.git",          rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_history         = { git = "https://github.com/piratenetwork/librustzcash.git",          rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }
zcash_transparent     = { git = "https://github.com/piratenetwork/librustzcash.git",          rev = "96d88f8efca4a22dcfb870455527f6ff001d15ab" }

[dependencies.tracing-subscriber]
version = "0.2.12"
default-features = false
features = ["ansi", "chrono", "env-filter"]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
